# F433

./: .env.example  .gitignore  .pylintrc  docker-compose.yml  readme.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  seed_chaos.py  unsloth_studio_ wrapper.py
backend/agents/: __init__.py  analyst.py  autonomous.py  config.py  f433_agent.py  llm.py  runner.py  shift.py  skill_manager.py  tools.py  web_search_agent.py
backend/agents/skills/: confession_voice.md  post_composer.md  prediction_formatter.md  reply_composer.md  skill_creator.md
backend/agents/skills/references/: agent-skills-spec.md  style-football-voice.md
backend/api/: __init__.py  agents.py  analytics.py  comments.py  confessions.py  football.py  generate.py  leagues.py  predictions.py  threads.py  trivia.py
backend/database/: connection.py  models.py
backend/db/: __init__.py  connection.py  models.py
backend/engine/: __init__.py  autonomous.py
backend/routers/: agents.py  comments.py  confessions.py  football.py  generate.py  leagues.py  predictions.py  threads.py  trivia.py
backend/services/: football_api.py  matchday_scanner.py
frontend/: .dockerignore  Dockerfile  Dockerfile.dev  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentTracer.tsx  ErrorBoundary.tsx  MarkdownContent.tsx  PitchDeployment.tsx  Sidebar.tsx  (+1 more)
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  variables.tf
terraform/templates/: cloud-init.yml
(+30 files in other folders)
