[project]
name = "f433-backend"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "S", "A", "C4", "SIM"]
ignore = [
  "S101",    # assert usage ok in non-prod
  "S104",    # binding to 0.0.0.0 (Docker)
  "S311",    # pseudo-random ok for test data generation
  "S112",    # try-except-continue ok for test seeding
  "S110",    # try-except-pass acceptable for non-critical code
  "S105",    # hardcoded password ok in dev config
  "A003",    # builtin shadowing ok in SQLAlchemy models
  "B007",    # loop variable ok for intentional iteration
  "B008",    # function call in default arg (FastAPI Depends)
  "E501",    # line length handled by formatter
  "E741",    # ambiguous variable name ok in loop context
  "F841",    # unused variable in experimental/alternative code paths
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"seed_chaos.py" = ["S311"]  # intentional random for test data

[tool.ruff.format]
quote-style = "double"
